<resources>
    <string name="app_name">MyViewsAndViewGroups</string>
    <string name="content_text">The iPhone 14 models come in blue, purple, midnight, starlight, and (PRODUCT)RED. Unlike the iPhone 14 Pro models, the iPhone 14 and 14 Plus continue to have a notch at the top of the display that houses the TrueDepth camera. Like the iPhone 13 models, the iPhone 14 and iPhone 14 Plus include Super Retina XDR OLED displays that support 1200 nits peak brightness, a 2,000,000:1 contrast ratio, Dolby Vision, and True Tone support for matching the white balance of the display to the lighting in the room. There is no ProMotion display technology available in the standard iPhone 14 models, with this feature limited to the Pro models.</string>
    <string name="content_specs_display">6.1 inches\n
 1170 x 2532 pixels, 19.5:9 ratio (~460 ppi density)\n
 uper Retina XDR OLED, HDR10, Dolby Vision, 800 nits </string>
    <string name="content_specs_size">146.7 x 71.5 x 7.8 mm (5.78 x 2.81 x 0.31 in)</string>
    <string name="content_specs_battery">3,279 mAh battery\n
 Standby time (LTE): up to 19 days\n
 Talk time (3g/WCDMA): up to 26 hours\n
 Internet use time (Wi-Fi): up to 13 hours\n
 Internet use time (LTE): up to 13 hours\n
 Video playback: up to 13 hours\n
 Audio playback (via headset): up to 110 hours\n
 Fast charging: up to 7 hours of use from only 15 minutes of
charging</string>
    <string name="stock">Stock hanya 3 buah</string>
    <string name="specification">Spesifikasi</string>
    <string name="display">Display</string>
    <string name="size">Size</string>
    <string name="battery">Battery</string>
    <string name="seller">Dijual oleh</string>
    <string name="my_name">Baihaqi</string>
    <string name="buy">Beli</string>
    <string name="call">Call CS</string>
    <string name="dummy_value">$735</string>
    <string name="dummy_photos">6 photos</string>
    <string name="description">Description</string>
    <string name="check">Check Image</string>
    <string name="success">Purchase Success!</string>
    <string name="dummy_name">Phone Name</string>
</resources>