<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    tools:context=".BuyActivity">

    <TextView
        android:id="@+id/tvPhoneName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_name"
        android:textSize="32sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/checkImg"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:contentDescription="@string/check"
        app:srcCompat="@drawable/check" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/success"
        android:textSize="32sp" />
</LinearLayout>